Quorum/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignNumberObject.quorum
class Main
    action Main
        Object v
        Test(v)
    end

    action Test(number var)
    end
end
